@@ -13,3 +13,16 @@ Alias       | Real Name         | e-mail
 ------------|-------------------|---------------------
 Neovanglist | Chris Gilbert     | Neovanglist@LainOS.org
 
+People that I'd like to thank, and why:
+
+emoon - For the BreakPoint Demo Lib, which I have used *so* much code from, and 
+	based a large portion of my learning on. Without this, gsKit would not have
+	been possible.
+
+ooPo - For research, documentation, and references implimentations for the DMAC and GS.
+
+t0mb0la - For several bugfixes, suggestions, and support.
+
+Drakonite - Bug fixes, misc help, and support.
+
+And everyone else from the PS2 Dev community! Thanks!
