@@ -65,3 +65,7 @@
  can also use the forums at http://forums.ps2dev.org, or optionally use
  the CVS mailing list at http://www.topica.com/lists/ps2cvs.
 
+ Credits
+ -----------------------------------------------------------------------
+ 
+ See AUTHORS.
