@@ -10,9 +10,7 @@ This is an overview of the current project status.
 
 This project has 6 major components:
 
-gsCore - A complete implimentation of every GS instruction.
-         This is really a C interface to what would otherwise
-	 be done in assembler. The rest of gsKit impliments this.
+gsCore - Low level routines that are critical to gsKit operation.
 gsFont - Font handling, conversion, and printing routines.
 gsInit - GS initialization and configuration routines.
 gsMisc - Miscellaneous routines that do not fit anywhere else.
@@ -24,22 +22,30 @@ dmaKit Components:
 dmaCore - Core DMA routines.
 dmaInit - DMA Initilization routines.
 
- _____________________________________________________________
-| Component   | Comment                                 |  %  |
-|-------------------------------------------------------------|
-| gsCore      | Needs to be stubbed out.                | 0%  |
-|-------------------------------------------------------------|
-| gsInit      | Needs to be stubbed out.                | 0%  |
-|-------------------------------------------------------------|
-| gsMisc      | Nothing here yet.                       | N/A |
-|-------------------------------------------------------------|
-| gsPrimitive | Needs to be stubbed out.                | 0%  |
-|-------------------------------------------------------------|
-| gsTexture   | Needs to be stubbed out.                | 0%  |
-|-------------------------------------------------------------|
-| dmaCore     | Work begun on implimentation            | 5%  |
-|-------------------------------------------------------------|
-| dmaInit     | Needs to be stubbed out.                | 0%  |
-|-------------------------------------------------------------|
+ ______________________________________________________________
+| Component   | Comment                                 |  %   |
+|--------------------------------------------------------------|
+| gsCore      | Completed.                              | 100% |
+|--------------------------------------------------------------|
+| gsInit      | Completed.                              | 100% |
+|--------------------------------------------------------------|
+| gsMisc      | Scaling "Functional" but not compelte.  | 50%  |
+|--------------------------------------------------------------|
+| gsPrimitive | Completed.                              | 100% |
+|--------------------------------------------------------------|
+| gsTexture   | Needs to be stubbed out.                | 0%   |
+|--------------------------------------------------------------|
+| gsFont      | Needs to be stubbed out.                | 0%   |
+|--------------------------------------------------------------|
+| dmaCore     | Completed.                              | 100% |
+|--------------------------------------------------------------|
+| dmaInit     | Completed.                              | 100% |
+|--------------------------------------------------------------|
 
 Contributors: Please do not modify this file without letting the others know what's going on. Please document your changes in the ChangeLog instead.
+
+BUGS:
+	* Scaling for DTV/VGA/DVD modes untested.
+	* Small line of artifacts at the bottom of the screen in NON_INTERLACED
+	  mode while using NTSC or PAL.
+	* dmaKit_send_chain_spr hard locks the PS2. Can't figure out why.
